fixes back button on mobile on writing

--- a/src/components/navigation/Back.scss
+++ b/src/components/navigation/Back.scss
@@ -7,7 +7,20 @@
     padding-left: 25px;
     padding-top: 20px;
 
-    .back-icon {
+    span.prefix {
         margin-right: 5px;
+    }
+
+    @media only screen and (max-width: 800px) {
+        padding-top: 0px;
+        margin-top: -2px;
+
+        span.prefix {
+            font-size: 48px;
+        }
+
+        span.text {
+            display: none;
+        }
     }
 }
